--- a/public/CSS/projectPage.css
+++ b/public/CSS/projectPage.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nerko+One&family=Permanent+Marker&display=swap');
 
-body{
+body {
     background-color: #fec84e;
     background-image: linear-gradient(315deg, #fec84e 0%, #ffdea8 74%);
 }
+
 #projectDetailsPage {
     margin-top: 4.5rem;
 }
 
 #projectDetailsPage .topImage {
     background-attachment: fixed;
-    /* width: 100%; */
-    height: 70vh;
+    height: 50vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -19,9 +19,17 @@ body{
     justify-content: center;
 }
 
+@media (min-width: 768px) {
+    #projectDetailsPage .topImage {
+        height: 70vh;
+    }
+}
+
+
 #projectDetailsPage .topImage img {
     position: absolute;
     top: 17rem;
+    width: 60vw;
 }
 
 #projectDetailsPage .projectHeader {
@@ -34,22 +42,104 @@ body{
 
 #projectDetailsPage .projectSubHeader {
     font-family: "Nerko One", cursive;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
     font-weight: 700;
     font-size: 1.5rem;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
 
-#projectDetailsPage .projectDescriptionContent{
+#projectDetailsPage .projectDescriptionContent {
     padding-left: 1.5rem;
-    font-family: "Kanit", sans-serif;   
+    font-family: "Kanit", sans-serif;
     font-weight: 600;
     font-size: 0.8rem;
-    text-align: justify; 
+    text-align: justify;
 }
 
-#projectDetailsPage .projectDescriptionContent .countNo{
+#projectDetailsPage .projectDescriptionContent .countNo {
     color: red;
     font-size: 1.2rem;
+}
+
+
+
+
+
+
+
+
+.threeBtns .button {
+    min-width: 15rem;
+    color: #fff;
+    margin: 20px;
+    padding: 12px 15px;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    transition: .3s;
+    z-index: 1;
+    background: #0077b6;
+    cursor: pointer;
+    border-radius: 6px;
+    text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+
+.threeBtns .navigateLinks:before {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    content: "";
+    top: 100%;
+    left: 5%;
+    height: 10px;
+    width: 90%;
+    opacity: 0;
+    background: radial-gradient(ellipse at center, #000 0%, rgb(99 103 203 / 0%) 80%);
+    transition-duration: 0.3s;
+    transition-property: transform opacity;
+}
+
+.threeBtns .navigateLinks:hover {
+    background: #000;
+    transform: translateY(-5px);
+}
+
+.threeBtns .navigateLinks:hover:before {
+    opacity: 1;
+    transform: translateY(5px);
+}
+
+.threeBtns .live {
+    background-color: #182b3a;
+    background-image: linear-gradient(315deg, #182b3a 0%, #20a4f3 74%);
+}
+
+
+.threeBtns .github {
+    background-color: #4d4855;
+    background-image: linear-gradient(147deg, #4d4855 0%, #000000 74%);
+}
+
+.languageContainer {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: white;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.languageContainer img {
+    height: 40px;
+    /* width: 80px; */
+    border-radius: 50%;
+    filter: drop-shadow(5px 5px 9px #000000);
 }
