--- a/public/CSS/ADMIN/adminPagesGeneral.css
+++ b/public/CSS/ADMIN/adminPagesGeneral.css
@@ -65,6 +65,7 @@
     position: fixed;
     bottom: 5.5rem;
     right: 2rem;
+    z-index: 5;
 }
 
 .addIcon button {
@@ -74,6 +75,10 @@
     background-color: #ffba08;
     font-size: 1.1rem;
     color: red;
+}
+
+.addIcon button:hover{
+    background-color: #ffba08;
 }
 
 
