--- a/public/CSS/ADMIN/adminAddUpdateForm.css
+++ b/public/CSS/ADMIN/adminAddUpdateForm.css
@@ -1,15 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-.contactMain {
+.mainDiv {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(#2980b9, #6dd5fa,
-            #ffffff);
-
-
+    background-color: #182b3a;
+    background-image: linear-gradient(315deg, #182b3a 0%, #20a4f3 74%);
 }
 
 .innerDiv {
@@ -21,18 +16,6 @@
     border-radius: 10px;
     min-width: 360px;
 }
-
-.imageContainer {
-    filter: drop-shadow(5px 5px 20px #000000);
-    display: flex;
-    justify-content: center;
-}
-
-.imageContainer>img {
-    min-width: 250px;
-    max-width: 30rem;
-}
-
 
 .heading {
     text-transform: capitalize;
@@ -50,25 +33,42 @@
     color: #bfc0c0;
 }
 
-.socialMedia {
-    width: 20%;
+
+
+
+
+.imageContainer {
+    filter: drop-shadow(5px 5px 20px #000000);
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
 }
 
-.socialMedia button {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    border-radius: 50%;
-    padding: 3px;
-    background-color: white;
+.imageContainer>img {
+    min-width: 250px;
+    max-width: 30rem;
+}
+
+
+/* update form Admin */
+.updateImageContainer {
+    filter: drop-shadow(5px 5px 20px #000000);
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
-.socialBtn {
-    height: 25px !important;
+.updateImageContainer>.languageImageContainerUpdate {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    background-color: whitesmoke;
+}
+
+.languageImageContainerUpdate>img{
+    height: 230px;
+    width: 230px;
     border-radius: 50%;
 }
